--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.8.4",
     "prettier-eslint": "15.0.1",
