--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,11 +12,12 @@ jobs:
       matrix: 
         node-version: [ 20.x ]
     steps:
+      - uses: actions/checkout@v3
       - name: Starting Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with: 
-        node-version: ${{ matrix.node-version }}
-
+          node-version: ${{ matrix.node-version }}
+          
       - name: Install Modules
         run: npm install
 
