--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,15 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: ${{ matrix.node-version }}
-          
+
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Update files from GitHub
+        run: git pull origin release
+
       - name: Install Modules
         run: npm install
 
@@ -30,13 +38,11 @@ jobs:
       - name: Format Test
         run: npm run format
 
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: List build directory
+        run: ls -la vnuk-brand/.next
 
       - name: Copy Files to Server
-        run: scp -o StrictHostKeyChecking=no -r ./build ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+        run: scp -o StrictHostKeyChecking=no -r vnuk-brand/.next ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
       - name: Restart application using PM2
         run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 reload vnuk"
