--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,14 @@ jobs:
       - name: Format Test
         run: npm run format
 
+      - name: List directory
+        run: ls -la
+
       - name: List build directory
-        run: ls -la vnuk-brand/.next
+        run: ls -la .next
 
       - name: Copy Files to Server
-        run: scp -o StrictHostKeyChecking=no -r vnuk-brand/.next ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+        run: scp -o StrictHostKeyChecking=no -r .next ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
       - name: Restart application using PM2
         run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 reload vnuk"
