--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,25 +23,29 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Install Modules
-        run: npm install
+      - name: Test SSH Connection
+        run: ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} "whoami"
 
-      - name: Build Project
-        run: npm run build
 
-      - name: ESLint Test
-        run: npm run lint
+      # - name: Install Modules
+      #   run: npm install
 
-      - name: Format Test
-        run: npm run format
+      # - name: Build Project
+      #   run: npm run build
 
-      - name: List directory
-        run: ls -la
+      # - name: ESLint Test
+      #   run: npm run lint
 
-      - name: Copy Files to Server
-        # run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+      # - name: Format Test
+      #   run: npm run format
 
-        run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
+      # - name: List directory
+      #   run: ls -la
 
-      - name: Restart application using PM2
-        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 restart vnuk"
+      # - name: Copy Files to Server
+      #   # run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+
+      #   run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
+
+      # - name: Restart application using PM2
+      #   run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 restart vnuk"
