--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,29 +23,25 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Test SSH Connection
-        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "whoami"
+      - name: Install Modules
+        run: npm install
 
+      - name: Build Project
+        run: npm run build
 
-      # - name: Install Modules
-      #   run: npm install
+      - name: ESLint Test
+        run: npm run lint
 
-      # - name: Build Project
-      #   run: npm run build
+      - name: Format Test
+        run: npm run format
 
-      # - name: ESLint Test
-      #   run: npm run lint
+      - name: List directory
+        run: ls -la
 
-      # - name: Format Test
-      #   run: npm run format
+      - name: Copy Files to Server
+        run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
-      # - name: List directory
-      #   run: ls -la
+        # run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
 
-      # - name: Copy Files to Server
-      #   # run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
-
-      #   run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
-
-      # - name: Restart application using PM2
-      #   run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 restart vnuk"
+      - name: Restart application using PM2
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 restart vnuk"
