--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: ls -la
 
       - name: Add host key to known hosts
-        run: ssh-keyscan -H <server_ip> >> ~/.ssh/known_hosts
+        run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
         env:
           SERVER_IP: ${{ secrets.HOST }}
 
