--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,9 @@ jobs:
       matrix: 
         node-version: [ 18.x ]
     steps:
-      - uses: actions/checkout@v3
+      - name: Clone Repository
+        uses: actions/checkout@v3
+        
       - name: Starting Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with: 
@@ -44,9 +46,9 @@ jobs:
           SERVER_IP: ${{ secrets.HOST }}
 
       - name: Copy Files to Server
-        run: rsync -a next.config.js tsconfig.json .next package.json node_modules  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+        # run: rsync -a next.config.js tsconfig.json .next package.json node_modules  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
-        # run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
+        run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
 
       - name: Restart application using PM2
         run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "/root/.nvm/versions/node/v18.16.0/bin/node /root/.nvm/versions/node/v18.16.0/bin/pm2 restart vnuk"
