--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,10 @@ jobs:
         run: npm run format
 
       - name: Set PATH environment variable
-        run: |
-         export PATH=$PATH:/root/.nvm/versions/node/v18.16.0/bin/
+        run: echo "PATH=$PATH:/root/.nvm/versions/node/v18.16.0/bin/" >> $GITHUB_ENV
+      
+      - name: Show updated PATH
+        run: echo $PATH
 
       - name: Add host key to known hosts
         run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
