--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     strategy: 
       matrix: 
         node-version: [ 18.x ]
+        path: [ /root/.nvm/versions/node/v18.16.0/bin/ ]
     steps:
       - name: Clone Repository
         uses: actions/checkout@v3
@@ -37,21 +38,15 @@ jobs:
       - name: Format Test
         run: npm run format
 
-      - name: Set PATH environment variable
-        run: echo "PATH=$PATH:/root/.nvm/versions/node/v18.16.0/bin/" >> $GITHUB_ENV
-      
-      - name: Show updated PATH
-        run: echo $PATH
-
       - name: Add host key to known hosts
         run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
         env:
           SERVER_IP: ${{ secrets.HOST }}
 
       - name: Copy Files to Server
-        # run: rsync -a next.config.js tsconfig.json .next package.json node_modules  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+        run: rsync -a next.config.js tsconfig.json .next package.json node_modules  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
-        run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
+        # run: rsync -av --delete --exclude=.git/ --exclude=node_modules/ --exclude=.next/ ./ ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand/
 
       - name: Restart application using PM2
-        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "pm2 stop vnuk"
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "${{ matrix }}node ${{ matrix }}pm2 stop vnuk"
