--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,9 +74,19 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
         env:
           SERVER_IP: ${{ secrets.HOST }}
+          
+      - name: Stop working
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "${{ matrix.path }}node ${{ matrix.path }}pm2 stop vnuk"
 
-      - name: Copy Files to Server
-        run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
+      - name: Get changes
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "${{ matrix.path }}node ${{ matrix.path }}git pull"
+
+      - name: Local build
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "${{ matrix.path }}node ${{ matrix.path }}npm run build"
+          
+
+      # - name: Copy Files to Server
+      #   run: rsync -a next.config.js tsconfig.json .next package.json node_modules ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/vnuk-brand
 
       - name: Restart application using PM2
         run: ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "${{ matrix.path }}node ${{ matrix.path }}pm2 restart vnuk"
