--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
         run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "cd * && git pull"
 
       - name: Local build
-        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "export PATH=$PATH:${{ matrix.path }} && npm run build"
+        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "cd * && export PATH=$PATH:${{ matrix.path }} && npm run build"
           
 
       # - name: Copy Files to Server
