--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,19 +74,21 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
         env:
           SERVER_IP: ${{ secrets.HOST }}
-          
-      - name: Stop working
-        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "export PATH=$PATH:${{ matrix.path }} && pm2 stop vnuk"
-
-      - name: Get changes
-        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "cd * && git pull"
-
-      - name: Local build
-        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "cd * && export PATH=$PATH:${{ matrix.path }} && npm run build"
-          
-
-      # - name: Copy Files to Server
-      #   run: rsync -a next.config.js tsconfig.json .next package.json node_modules root@${{ secrets.HOST }}:/vnuk-brand
-
-      - name: Restart application using PM2
-        run: ssh -o StrictHostKeyChecking=no root@${{ secrets.HOST }} "export PATH=$PATH:${{ matrix.path }} && pm2 restart vnuk"
+      
+      - name: Deploy Application
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
+            set -e
+            export PATH=$PATH:${{ matrix.path }}
+            cd vnuk-brand || exit 1
+            echo "Stopping pm2 process..."
+            pm2 stop vnuk || exit 1
+            echo "Pulling latest changes..."
+            git pull || exit 1
+            echo "Installing dependencies..."
+            npm install || exit 1
+            echo "Building application..."
+            npm run build || exit 1
+            echo "Restarting pm2 process..."
+            pm2 restart vnuk || exit 1
+          EOF
