--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,11 +70,31 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add host key to known hosts
-        run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-        env:
-          SERVER_IP: ${{ secrets.HOST }}
+      # - name: Add host key to known hosts
+      #   run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+      #   env:
+      #     SERVER_IP: ${{ secrets.HOST }}
       
+          # - name: Deploy Application
+          # run: |
+          #   ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
+          #     set -e
+          #     export PATH=$PATH:${{ matrix.path }}
+          #     cd vnuk-brand || exit 1
+          #     echo "Stopping pm2 process..."
+          #     pm2 stop vnuk || exit 1
+          #     echo "Pulling latest changes..."
+          #     git pull || exit 1
+          #     echo "Installing dependencies..."
+          #     npm install || exit 1
+          #     echo "Building application..."
+          #     npm run build || exit 1
+          #     echo "Restarting pm2 process..."
+          #     pm2 restart vnuk || exit 1
+          #   EOF
+  
+            
+
       - name: Deploy Application
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
@@ -83,12 +103,4 @@ jobs:
             cd vnuk-brand || exit 1
             echo "Stopping pm2 process..."
             pm2 stop vnuk || exit 1
-            echo "Pulling latest changes..."
-            git pull || exit 1
-            echo "Installing dependencies..."
-            npm install || exit 1
-            echo "Building application..."
-            npm run build || exit 1
-            echo "Restarting pm2 process..."
-            pm2 restart vnuk || exit 1
           EOF
