--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,26 +6,6 @@ on:
       - main
 
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-    strategy: 
-      matrix: 
-        node-version: [ 18.x ]
-    steps:
-      - name: Clone Repository
-        uses: actions/checkout@v3
-        
-      - name: Starting Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with: 
-          node-version: ${{ matrix.node-version }}
-
-      # - name: Install Modules
-      #   run: npm install
-
-      # - name: Build Project
-      #   run: npm run build
-
   Tests:
     runs-on: ubuntu-latest
     strategy: 
@@ -40,23 +20,21 @@ jobs:
         with: 
           node-version: ${{ matrix.node-version }}
 
-      # - name: Install Modules
-      #   run: npm install
+      - name: Install Modules
+        run: npm install
 
-      # - name: ESLint Test
-      #   run: npm run lint
+      - name: ESLint Test
+        run: npm run lint
 
-      # - name: Format Test
-      #   run: npm run format
+      - name: Format Test
+        run: npm run format
 
-
-  Deploy:
+  Build:
     runs-on: ubuntu-latest
-    needs: [ Tests, Build ]
+    needs: Tests
     strategy: 
       matrix: 
         node-version: [ 18.x ]
-        path: [ /root/.nvm/versions/node/v18.16.0/bin/ ]
     steps:
       - name: Clone Repository
         uses: actions/checkout@v3
@@ -66,16 +44,30 @@ jobs:
         with: 
           node-version: ${{ matrix.node-version }}
 
+      - name: Install Modules
+        run: npm install
+
+      - name: Build Project
+        run: npm run build
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: [ Tests, Build ]
+    steps:
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      
+
+      - name: Add host key to known hosts
+        run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+
       - name: Deploy Application
+        env:
+          PATH: $PATH:/root/.nvm/versions/node/v18.16.0/bin/
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'EOF'
             set -e
-            export PATH=$PATH:${{ matrix.path }}
             cd vnuk-brand || exit 1
             echo "Stopping pm2 process..."
             pm2 stop vnuk || exit 1
